--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,25 +4,25 @@ Version: 0.0.0.9000
 Authors@R: 
     person(given = "Avery",
            family = "Robbins",
-           role = c("aut", "cre"),
-           email = "avery.lewis.robbins@gmail.com"
+           email = "avery.lewis.robbins@gmail.com",
+           role = c("aut", "cre")
            )
 Description: This package was created in an effort to automate certain tasks
-  and processes that Avery Robbins found himself doing on a regular basis. It
-  will initially be a place where he stores helper functions and just functions
-  in general that automate manual tasks.
+    and processes that Avery Robbins found himself doing on a regular basis.
+    It will initially be a place where he stores helper functions and just
+    functions in general that automate manual tasks.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.0
 Imports: 
-    purrr,
-    fs,
-    here,
-    glue,
-    readr,
-    dplyr,
-    magrittr,
-    stringr,
-    tibble
+    purrr (>= 0.3.4),
+    fs (>= 1.4.1),
+    here (>= 0.1),
+    glue (>= 1.4.1),
+    readr (>= 1.3.1),
+    dplyr (>= 1.0.0),
+    magrittr (>= 1.5),
+    stringr (>= 1.4.0),
+    tibble (>= 3.0.1)
