--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,5 +5,6 @@ export(add_notes)
 export(count_values)
 export(get_started)
 export(get_started2)
+export(print_all)
 export(remember_package)
 export(source_helpers)
