--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,9 @@ export(add_notes)
 export(count_values)
 export(get_started)
 export(get_started2)
+export(new_eda)
+export(new_model)
+export(new_script)
 export(print_all)
 export(remember_package)
 export(source_helpers)
