get_theme_toggle

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(add_notes)
 export(count_values)
 export(get_started)
 export(get_started2)
+export(get_theme_toggle)
 export(new_eda)
 export(new_model)
 export(new_script)
