--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,4 +26,6 @@ Imports:
     magrittr (>= 1.5),
     stringr (>= 1.4.0),
     tibble (>= 3.0.1),
-    rstudioapi (>= 0.11)
+    rstudioapi (>= 0.11),
+    pacman (>= 0.5.1),
+    rsthemes (>= 0.0.7)
