--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,9 +6,9 @@ export(count_values)
 export(get_started)
 export(get_started2)
 export(get_theme_toggle)
-export(new_eda)
-export(new_model)
-export(new_script)
 export(print_all)
 export(remember_package)
 export(source_helpers)
+export(use_eda)
+export(use_model)
+export(use_script)
