i am getting there

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,10 +3,13 @@
 export(add_note)
 export(add_notes)
 export(count_values)
+export(current_script)
 export(get_started)
 export(get_started2)
 export(get_theme_toggle)
+export(outline_workflow)
 export(print_all)
+export(prop)
 export(remember_package)
 export(source_helpers)
 export(use_eda)
