--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,12 @@ export(current_script)
 export(get_started)
 export(get_started2)
 export(get_theme_toggle)
+export(ls_data_derived)
+export(ls_data_raw)
+export(ls_eda)
+export(ls_helpers)
+export(ls_models)
+export(ls_scripts)
 export(outline_workflow)
 export(print_all)
 export(prop)
